--- a/style.css
+++ b/style.css
@@ -9,5 +9,39 @@
     width: 100%;
     min-height: 100vh;
     background : linear-gradient(135deg , blue, red);
-    padding: 10px ;
+    padding: 10px;
 }
+
+.todo-app {
+    width: 100%;
+    max-width: 540px;
+    background: #fff;
+    margin: 100px auto 20px;
+    padding: 40px 30px 70px;
+    border-radius: 10px;
+}
+
+.todo-app h2 {
+    color: #002765;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.todo-app h2 img {
+    width: 30px;
+    margin-left: 10px;
+}
+
+.row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #edeef0;
+    border-radius: 30px;
+    /* padding: 0 0 0 20px; */
+    /* top right bottom left */
+    padding-left: 20px;
+    margin-bottom: 25px;
+}
+
