--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .container {
     width: 100%;
     min-height: 100vh;
-    background : linear-gradient(135deg , blue, red);
+    background : linear-gradient(135deg , rgb(15, 15, 139), rgb(167, 55, 55), rgb(29, 31, 83));
     padding: 10px;
 }
 
@@ -44,4 +44,45 @@
     padding-left: 20px;
     margin-bottom: 25px;
 }
+
+input {
+    flex: 1; /* takes full width*/
+    border: none;
+    outline: none;
+    background: transparent;
+    padding: 10px;
+}
+
+button {
+    border: none;
+    outline: none;
+    padding: 16px 50px;
+    background: #ff5947;
+    color: #fff;
+    border-radius: 40px;
+    cursor: pointer;
+}
+
+ul li {
+    list-style:none ;
+    font-size: 17px;
+    padding: 12px 8px 12px 50px;
+    user-select: none;
+    cursor: pointer;
+    position: relative ;
+}
+
+ul li::before {
+    content: '';
+    position: absolute;
+    height: 28px;
+    width: 28px;
+    border-radius: 50%;
+    background-image: url(images/unchecked.png);
+    background-size: cover;
+    background-position: center;
+    top: 12px;
+    left: 8px;
+
+} 
 
